# xy_web_work

./: .gitmodules  .xy-codehub-ci.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml
readme/: README.en.md  README.zh-hant.md  README_en.md  README_zh_CN.md  README_zh_TW.md
readme/readme/: README.en.md  README.zh-hant.md
samples/xy_web_demo/config/: xy_web_work.toml
samples/xy_web_demo/source/Runner/: Runner.py
test/: main.py
test/config/: xy_web.toml
test/template/: runner_py.template
test/xy_web_work_demo/: main.py
test/xy_web_work_demo/config/: xy_web.toml
test/xy_web_work_demo/source/Runner/: Runner.py
xy_web_work/: ModuleData.py  WebWork.py  Work.py  __init__.py
xy_web_work/Admin/: Admin.py
xy_web_work/Backup/: Backup.py
xy_web_work/Database/: Database.py  Way.py
xy_web_work/Database/Connector/Mongo/: Mongo.py
xy_web_work/Debug/: Debug.py
xy_web_work/Extension/: Way.py
xy_web_work/Log/: Log.py
xy_web_work/Project/: Project.py
xy_web_work/Resource/: Resource.py
xy_web_work/Run/: Run.py
xy_web_work/Server/: Server.py
xy_web_work/Settings/: Settings.py
xy_web_work/Settings/Section/: Project.py  Runner.py  Section.py
xy_web_work/Site/: Site.py
xy_web_work/System/: OS.py  System.py
xy_web_work/System/Brew/: Brew.py
xy_web_work/System/Python/: Python.py
xy_web_work/System/Shell/: Shell.py
xy_web_work/System/Supervisor/: Supervisor.py  __init__.py
xy_web_work/System/Systemctl/: Systemctl.py  __init__.py
xy_web_work/Test/: Test.py  Way.py
xy_web_work/Workspace/: Workspace.py  __init__.py
(+18 files in other folders)
